# voxelfusion

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  fragment.glsl  main.cpp  parsingTable.json
.github/workflows/: main.yml
CFG/: CFG.cpp  CFG.h  main.cpp  utils.cpp  utils.h
CFG/AugmentedCFG/: AugmentedCFG.cpp  AugmentedCFG.h
CFG/input/: CFG.json  input-ll1-2.json
MTMDTuringMachine/: MTMDTuringMachine.h  TMTape.cpp  TMTape.h  main.cpp
Parser/CLR1Parser/: CLR1Parser.cpp  CLR1Parser.h
Parser/LL1Parser/: LL1Parser.cpp  LL1Parser.h
docs/: docs.cfg
src/: main.cpp
src/CFG/: AugmentedCFG.cpp  AugmentedCFG.h  CFG.cpp  CFG.h  CFGUtils.cpp  CFGUtils.h
src/LR1Parser/: Action.cpp  Action.h  LR1Parser.cpp  LR1Parser.h  LR1ParsingSpace.h
src/Lexer/: Lexer.cpp  Lexer.h  TokenType.h
src/MTMDTuringMachine/: FiniteControl.cpp  FiniteControl.h  MTMDTuringMachine.cpp  MTMDTuringMachine.h  TMTape.cpp  TMTape.h  TMTapeCell.cpp  TMTapeCell.h  TMTapeUtils.cpp  TMTapeUtils.h
src/OBJParser/: OBJParser.cpp  OBJParser.h
src/SymbolTable/: SymbolTable.cpp  SymbolTable.h
src/TMgenerator/: TMGenerator.cpp  TMGenerator.h
src/Visualisation/: AtomicQueue.h  Camera.cpp  Camera.h  ElementBuffer.cpp  ElementBuffer.h  Shader.cpp  Shader.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  Visualisation.cpp  Visualisation.h  VisualisationHelper.cpp  VisualisationHelper.h  VisualisationManager.cpp  VisualisationManager.h  fragment.glsl  vertex.glsl
src/lib/: invariants.h  (+1 more)
src/tests/: CMakeLists.txt  test.cpp
src/tests/comparison/: basicConditionalsTM.dot  diagonalMoveTM.dot
tasm/: CA.tasm  arrays.tasm  boom-template.tasm  boring-chess-hall.tasm  chess-hall.tasm  chess-hall2.tasm  conditional.tasm  generalCA.tasm  helloworld.tasm  random-color.tasm  random.tasm  terrain-generation.tasm  to-delete.tasm  todelete.txt  variables-integers.tasm  variables-symbols.tasm  variables.tasm  water-physics-template.tasm  water-physics.tasm
(+25 files in other folders)
